echo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-service
  name: echo-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: echo-service
